<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- App -->
    <string name="app_keep">Keep</string>
    <string name="app_history">History</string>

    <!-- Nav -->
    <string name="nav_vod">Home</string>
    <string name="nav_live">Live</string>
    <string name="nav_setting">Mine</string>

    <!-- Menu -->
    <string name="menu_sync">Sync</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_search">Search</string>
    <string name="menu_site">Site</string>
    <string name="menu_reset">Reset</string>

    <!-- Vod -->
    <string name="vod_home">Home</string>

    <!-- Detail -->
    <string name="detail_flag">Flag</string>
    <string name="detail_episode">Episode</string>
    <string name="detail_quality">Quality</string>
    <string name="detail_content">Summary</string>
    <string name="detail_search">Searching <xliff:g name="name">%s</xliff:g></string>

    <!-- Device -->
    <string name="device_select">Select devices</string>
    <string name="device_offline">Device is offline</string>
    <string name="device_scan">Please scan QR Code to bind</string>

    <!-- Control -->
    <string name="control_speed">Speed</string>
    <string name="control_scale">Scale</string>
    <string name="control_track">Track</string>
    <string name="control_other">Other</string>

    <!-- Dialog -->
    <string name="dialog_delete_record">Delete all records?</string>
    <string name="dialog_delete_keep">All keep records will be removed.</string>
    <string name="dialog_delete_history">All history records will be removed.</string>

    <!-- Timer -->
    <string name="timer_5">5 minutes</string>
    <string name="timer_15">15 minutes</string>
    <string name="timer_30">30 minutes</string>
    <string name="timer_60">1 hour</string>
    <string name="timer_delay">Add 5 minutes</string>
    <string name="timer_cancel">Cancel timer</string>

    <!-- Hint -->
    <string name="shortcut">Shortcut has been added.</string>

    <string-array name="select_background">
        <item>Off</item>
        <item>On</item>
        <item>PiP</item>
    </string-array>

    <string name="live_no_epg">暂无节目信息</string>
    <string name="live_control_source">直播源</string>

    <string name="live_control_play">来源</string>
    <string name="live_control_config">订阅接口</string>
    <string name="live_control_epg">EPG源</string>
    <string name="live_control_action">操作</string>
    <string name="live_control_cast">投屏</string>
    <string name="live_control_pip">悬窗</string>
    <string name="live_control_bg">后台播放</string>
    <string name="live_control_pref">偏好</string>
    <string name="live_control_style">显示风格</string>
    <string name="live_control_style_glass">通透</string>
    <string name="live_control_style_classic">易读</string>
    <string name="live_control_display">屏显设置</string>
    <string name="live_control_time">时间</string>
    <string name="live_control_net">网速</string>
    <string name="live_control_size">分辨率</string>
    <string name="live_control_title">标题</string>
    <string name="live_control_params">播放参数</string>
    <string name="live_control_scale">缩放</string>
    <string name="live_control_track">轨道</string>

    <string name="live_epg_follow">跟随</string>
    <string name="live_epg_select">选择EPG源</string>
    <string name="live_epg_apply">应用</string>
    <string name="live_epg_save">保存</string>
    <string name="live_epg_hint">输入 EPG 地址，支持 {name}/{id}/{epg}</string>
    <string name="live_epg_empty">请输入 EPG 地址</string>
    <string name="live_epg_default">默认（订阅内）</string>
    <string name="live_epg_edit">编辑</string>
    <string name="live_epg_delete">删除</string>
    <string name="ysc_search_hint">Search title / actor / director</string>
    <string name="live_program_empty">No program guide</string>
    <string name="live_program_current">Live</string>
</resources>